# synth-music

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  TODOs-0.1.1.md  TODOs-0.2.0.md  TODOs-breaking.md  TODOs-future.md  TODOs-not-breaking.md  TODOs.md  improved-conversion.md  new-section-principles.md  shortcut-traits.md  time-signature-system.md
examples/custom_note_system/: drumset.rs  main.rs
examples/dynamics/: main.rs
examples/hello/: Cargo.toml  main.rs
examples/hello/src/: instruments.rs  main.rs
examples/melody/: Cargo.toml  instruments.rs  main.rs  tracks.rs
examples/melody/instruments/: drumset.rs
examples/melody/src/: instruments.rs  main.rs  tracks.rs
examples/noise_test/: main.rs
examples/tetris/: instruments.rs  main.rs  tracks.rs
examples/tetris/instruments/: drumset.rs
examples/time_signatures/: main.rs
src/: composer.rs  file_export.rs  instrument.rs  lib.rs  prelude.rs  progress_bars.rs
src/composer/: measure_track.rs  music_key.rs  note.rs  time_signature.rs  track.rs  unbound_track.rs
src/composer/measure_track/: tests.rs
src/composer/note/: length.rs
src/composer/time_signature/: tests.rs
src/composer/unbound_track/: tests.rs
src/file_export/: export_info.rs  wav_export.rs
src/instrument/: curve.rs  eq.rs  noise.rs  predefined.rs
synth-music/: Cargo.toml
unnamed-music/: Cargo.toml  README.md  Section-Rework.md  TODOs.md  new-submodule-structure.md  notes-representation.md
unnamed-music/src/: composer.rs  file_export.rs  file_writer.rs  instrument.rs  lib.rs  melody.rs  prelude.rs
(+28 files in other folders)
