[package]
name = "synth-music"
description = "A framework-like crate to compose and synthetisize music"

version = "0.2.0"
edition = "2021"

repository = "https://github.com/CinTheDev/synth-music"
readme = "README.md"
license = "MIT"

categories = ["multimedia::audio"]
keywords = ["synth", "music", "audio"]

[dependencies]
bytemuck = "1.18.0"
indicatif = "0.17.8"

[dev-dependencies]
biquad = "0.4.2"
rand = "0.8.5"
